--- a/requirements-unit.txt
+++ b/requirements-unit.txt
@@ -20,12 +20,18 @@ certifi==2023.5.7
     #   httpcore
     #   httpx
     #   requests
+charmed-kubeflow-chisme==0.0.11
+    # via -r ./requirements.txt
 charset-normalizer==3.1.0
     # via
     #   -r ./requirements.txt
     #   requests
 coverage==7.2.7
     # via -r ./requirements-unit.in
+deepdiff==6.2.1
+    # via
+    #   -r ./requirements.txt
+    #   charmed-kubeflow-chisme
 exceptiongroup==1.1.1
     # via
     #   -r ./requirements.txt
@@ -56,13 +62,17 @@ importlib-resources==5.12.0
 iniconfig==2.0.0
     # via pytest
 jinja2==3.1.2
-    # via -r ./requirements.txt
+    # via
+    #   -r ./requirements.txt
+    #   charmed-kubeflow-chisme
 jsonschema==4.17.3
     # via
     #   -r ./requirements.txt
     #   serialized-data-interface
 lightkube==0.13.0
-    # via -r ./requirements.txt
+    # via
+    #   -r ./requirements.txt
+    #   charmed-kubeflow-chisme
 lightkube-models==1.27.1.4
     # via
     #   -r ./requirements.txt
@@ -74,7 +84,12 @@ markupsafe==2.1.3
 ops==1.5.5
     # via
     #   -r ./requirements.txt
+    #   charmed-kubeflow-chisme
     #   serialized-data-interface
+ordered-set==4.1.0
+    # via
+    #   -r ./requirements.txt
+    #   deepdiff
 packaging==23.1
     # via pytest
 pkgutil-resolve-name==1.3.10
@@ -106,6 +121,14 @@ requests==2.31.0
     # via
     #   -r ./requirements.txt
     #   serialized-data-interface
+ruamel-yaml==0.17.31
+    # via
+    #   -r ./requirements.txt
+    #   charmed-kubeflow-chisme
+ruamel-yaml-clib==0.2.7
+    # via
+    #   -r ./requirements.txt
+    #   ruamel-yaml
 serialized-data-interface==0.6.0
     # via -r ./requirements.txt
 sniffio==1.3.0
@@ -114,6 +137,10 @@ sniffio==1.3.0
     #   anyio
     #   httpcore
     #   httpx
+tenacity==8.2.2
+    # via
+    #   -r ./requirements.txt
+    #   charmed-kubeflow-chisme
 tomli==2.0.1
     # via pytest
 urllib3==2.0.3
