--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,12 @@ certifi==2023.5.7
     #   httpcore
     #   httpx
     #   requests
+charmed-kubeflow-chisme==0.0.11
+    # via -r ./requirements.in
 charset-normalizer==3.1.0
     # via requests
+deepdiff==6.2.1
+    # via charmed-kubeflow-chisme
 exceptiongroup==1.1.1
     # via anyio
 h11==0.14.0
@@ -31,11 +35,15 @@ idna==3.4
 importlib-resources==5.12.0
     # via jsonschema
 jinja2==3.1.2
-    # via -r ./requirements.in
+    # via
+    #   -r ./requirements.in
+    #   charmed-kubeflow-chisme
 jsonschema==4.17.3
     # via serialized-data-interface
 lightkube==0.13.0
-    # via -r ./requirements.in
+    # via
+    #   -r ./requirements.in
+    #   charmed-kubeflow-chisme
 lightkube-models==1.27.1.4
     # via lightkube
 markupsafe==2.1.3
@@ -43,7 +51,10 @@ markupsafe==2.1.3
 ops==1.5.5
     # via
     #   -r ./requirements.in
+    #   charmed-kubeflow-chisme
     #   serialized-data-interface
+ordered-set==4.1.0
+    # via deepdiff
 pkgutil-resolve-name==1.3.10
     # via jsonschema
 pyrsistent==0.19.3
@@ -55,6 +66,10 @@ pyyaml==6.0
     #   serialized-data-interface
 requests==2.31.0
     # via serialized-data-interface
+ruamel-yaml==0.17.31
+    # via charmed-kubeflow-chisme
+ruamel-yaml-clib==0.2.7
+    # via ruamel-yaml
 serialized-data-interface==0.6.0
     # via -r ./requirements.in
 sniffio==1.3.0
@@ -62,6 +77,8 @@ sniffio==1.3.0
     #   anyio
     #   httpcore
     #   httpx
+tenacity==8.2.2
+    # via charmed-kubeflow-chisme
 urllib3==2.0.3
     # via requests
 zipp==3.15.0
