--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -43,12 +43,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup operator environment
-        uses: claudiubelu/actions-operator@18ebf92ae3043bd3dd15238e5d9b662d7ba08daf
+        uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
           channel: 1.24/stable
-          # Pinned until this bug is resolved: https://bugs.launchpad.net/juju/+bug/1992833
-          bootstrap-options: "--agent-version=2.9.34"
+          juju-channel: 2.9/stable
           microk8s-addons: "dns storage rbac metallb:10.64.140.43-10.64.140.49"
 
       # https://github.com/charmed-kubernetes/actions-operator/issues/27
