--- a/requirements-integration.txt
+++ b/requirements-integration.txt
@@ -4,41 +4,38 @@
 #
 #    pip-compile --resolver=backtracking ./requirements-integration.in
 #
-aiohttp==3.8.3
+aiohttp==3.8.4
     # via -r ./requirements-integration.in
 aiosignal==1.3.1
     # via aiohttp
-anyio==3.6.2
+anyio==3.7.0
     # via
     #   -r ./requirements.txt
     #   httpcore
 asttokens==2.2.1
     # via stack-data
 async-generator==1.10
-    # via
-    #   trio
-    #   trio-websocket
+    # via trio
 async-timeout==4.0.2
     # via aiohttp
-attrs==22.1.0
+attrs==23.1.0
     # via
     #   -r ./requirements.txt
     #   aiohttp
     #   jsonschema
     #   outcome
-    #   pytest
     #   trio
 backcall==0.2.0
     # via ipython
 bcrypt==4.0.1
     # via paramiko
-blinker==1.5
+blinker==1.6.2
     # via selenium-wire
 brotli==1.0.9
     # via selenium-wire
-cachetools==5.2.0
+cachetools==5.3.1
     # via google-auth
-certifi==2022.12.7
+certifi==2023.5.7
     # via
     #   -r ./requirements.txt
     #   httpcore
@@ -51,13 +48,12 @@ cffi==1.15.1
     # via
     #   cryptography
     #   pynacl
-chardet==3.0.4
+charset-normalizer==3.1.0
     # via
     #   -r ./requirements.txt
+    #   aiohttp
     #   requests
-charset-normalizer==2.1.1
-    # via aiohttp
-cryptography==38.0.4
+cryptography==41.0.1
     # via
     #   paramiko
     #   pyopenssl
@@ -65,17 +61,20 @@ decorator==5.1.1
     # via
     #   ipdb
     #   ipython
-exceptiongroup==1.0.4
+exceptiongroup==1.1.1
     # via
+    #   -r ./requirements.txt
+    #   anyio
     #   pytest
     #   trio
+    #   trio-websocket
 executing==1.2.0
     # via stack-data
 frozenlist==1.3.3
     # via
     #   aiohttp
     #   aiosignal
-google-auth==2.15.0
+google-auth==2.17.3
     # via kubernetes
 h11==0.14.0
     # via
@@ -86,11 +85,11 @@ h2==4.1.0
     # via selenium-wire
 hpack==4.0.0
     # via h2
-httpcore==0.16.2
+httpcore==0.17.2
     # via
     #   -r ./requirements.txt
     #   httpx
-httpx==0.23.1
+httpx==0.24.1
     # via
     #   -r ./requirements.txt
     #   lightkube
@@ -98,19 +97,23 @@ hyperframe==6.0.1
     # via
     #   h2
     #   selenium-wire
-idna==2.10
+idna==3.4
     # via
     #   -r ./requirements.txt
     #   anyio
+    #   httpx
     #   requests
-    #   rfc3986
     #   trio
     #   yarl
-iniconfig==1.1.1
+importlib-resources==5.12.0
+    # via
+    #   -r ./requirements.txt
+    #   jsonschema
+iniconfig==2.0.0
     # via pytest
-ipdb==0.13.9
+ipdb==0.13.13
     # via pytest-operator
-ipython==8.7.0
+ipython==8.12.2
     # via ipdb
 jedi==0.18.2
     # via ipython
@@ -119,11 +122,11 @@ jinja2==3.1.2
     #   -r ./requirements-integration.in
     #   -r ./requirements.txt
     #   pytest-operator
-jsonschema==3.2.0
+jsonschema==4.17.3
     # via
     #   -r ./requirements.txt
     #   serialized-data-interface
-juju==3.0.4
+juju==2.9.42.4
     # via
     #   -r ./requirements-integration.in
     #   pytest-operator
@@ -131,11 +134,11 @@ jujubundlelib==0.5.7
     # via theblues
 kaitaistruct==0.10
     # via selenium-wire
-kubernetes==17.17.0
+kubernetes==26.1.0
     # via juju
-lightkube==0.11.0
+lightkube==0.13.0
     # via -r ./requirements.txt
-lightkube-models==1.25.4.4
+lightkube-models==1.27.1.4
     # via
     #   -r ./requirements.txt
     #   lightkube
@@ -143,27 +146,27 @@ macaroonbakery==1.3.1
     # via
     #   juju
     #   theblues
-markupsafe==2.1.1
+markupsafe==2.1.3
     # via
     #   -r ./requirements.txt
     #   jinja2
 matplotlib-inline==0.1.6
     # via ipython
-multidict==6.0.3
+multidict==6.0.4
     # via
     #   aiohttp
     #   yarl
-mypy-extensions==0.4.3
+mypy-extensions==1.0.0
     # via typing-inspect
 oauthlib==3.2.2
     # via requests-oauthlib
-ops==1.5.4
+ops==1.5.5
     # via
     #   -r ./requirements.txt
     #   serialized-data-interface
 outcome==1.2.0
     # via trio
-packaging==22.0
+packaging==23.1
     # via pytest
 paramiko==2.12.0
     # via juju
@@ -173,9 +176,13 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
+pkgutil-resolve-name==1.3.10
+    # via
+    #   -r ./requirements.txt
+    #   jsonschema
 pluggy==1.0.0
     # via pytest
-prompt-toolkit==3.0.36
+prompt-toolkit==3.0.38
     # via ipython
 protobuf==3.20.3
     # via macaroonbakery
@@ -183,17 +190,17 @@ ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
-pyasn1==0.4.8
+pyasn1==0.5.0
     # via
     #   juju
     #   pyasn1-modules
     #   rsa
     #   selenium-wire
-pyasn1-modules==0.2.8
+pyasn1-modules==0.3.0
     # via google-auth
 pycparser==2.21
     # via cffi
-pygments==2.13.0
+pygments==2.15.1
     # via ipython
 pymacaroons==0.13.0
     # via macaroonbakery
@@ -202,7 +209,7 @@ pynacl==1.5.0
     #   macaroonbakery
     #   paramiko
     #   pymacaroons
-pyopenssl==22.1.0
+pyopenssl==23.2.0
     # via selenium-wire
 pyparsing==3.0.9
     # via selenium-wire
@@ -210,7 +217,7 @@ pyrfc3339==1.1
     # via
     #   juju
     #   macaroonbakery
-pyrsistent==0.19.2
+pyrsistent==0.19.3
     # via
     #   -r ./requirements.txt
     #   jsonschema
@@ -218,19 +225,19 @@ pysocks==1.7.1
     # via
     #   selenium-wire
     #   urllib3
-pytest==7.2.0
+pytest==7.3.2
     # via
     #   pytest-asyncio
     #   pytest-operator
-pytest-asyncio==0.20.3
+pytest-asyncio==0.21.0
     # via pytest-operator
-pytest-operator==0.22.0
+pytest-operator==0.27.0
     # via -r ./requirements-integration.in
 python-dateutil==2.8.2
     # via kubernetes
-pytz==2022.6
+pytz==2023.3
     # via pyrfc3339
-pyyaml==5.4
+pyyaml==6.0
     # via
     #   -r ./requirements.txt
     #   juju
@@ -240,7 +247,7 @@ pyyaml==5.4
     #   ops
     #   pytest-operator
     #   serialized-data-interface
-requests==2.25.0
+requests==2.31.0
     # via
     #   -r ./requirements-integration.in
     #   -r ./requirements.txt
@@ -251,26 +258,20 @@ requests==2.25.0
     #   theblues
 requests-oauthlib==1.3.1
     # via kubernetes
-rfc3986[idna2008]==1.5.0
-    # via
-    #   -r ./requirements.txt
-    #   httpx
 rsa==4.9
     # via google-auth
-selenium==4.7.2
+selenium==4.10.0
     # via
     #   -r ./requirements-integration.in
     #   selenium-wire
 selenium-wire==5.1.0
     # via -r ./requirements-integration.in
-serialized-data-interface==0.3.5
+serialized-data-interface==0.6.0
     # via -r ./requirements.txt
 six==1.16.0
     # via
-    #   -r ./requirements.txt
     #   asttokens
     #   google-auth
-    #   jsonschema
     #   kubernetes
     #   macaroonbakery
     #   paramiko
@@ -287,17 +288,17 @@ sortedcontainers==2.4.0
     # via trio
 stack-data==0.6.2
     # via ipython
-tenacity==8.1.0
+tenacity==8.2.2
     # via -r ./requirements-integration.in
 theblues==0.5.2
     # via juju
-toml==0.10.2
-    # via ipdb
 tomli==2.0.1
-    # via pytest
-toposort==1.7
+    # via
+    #   ipdb
+    #   pytest
+toposort==1.10
     # via juju
-traitlets==5.7.0
+traitlets==5.9.0
     # via
     #   ipython
     #   matplotlib-inline
@@ -305,21 +306,23 @@ trio==0.22.0
     # via
     #   selenium
     #   trio-websocket
-trio-websocket==0.9.2
+trio-websocket==0.10.3
     # via selenium
-typing-extensions==4.4.0
-    # via typing-inspect
-typing-inspect==0.8.0
+typing-extensions==4.6.3
+    # via
+    #   ipython
+    #   typing-inspect
+typing-inspect==0.9.0
     # via juju
-urllib3[socks]==1.26.13
+urllib3[socks]==2.0.3
     # via
     #   -r ./requirements.txt
     #   kubernetes
     #   requests
     #   selenium
-wcwidth==0.2.5
+wcwidth==0.2.6
     # via prompt-toolkit
-websocket-client==1.4.2
+websocket-client==1.5.3
     # via kubernetes
 websockets==7.0
     # via juju
@@ -327,9 +330,13 @@ wsproto==1.2.0
     # via
     #   selenium-wire
     #   trio-websocket
-yarl==1.8.2
+yarl==1.9.2
     # via aiohttp
-zstandard==0.19.0
+zipp==3.15.0
+    # via
+    #   -r ./requirements.txt
+    #   importlib-resources
+zstandard==0.21.0
     # via selenium-wire
 
 # The following packages are considered to be unsafe in a requirements file:
