--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,7 @@
 # See LICENSE file for licensing details.
 
 jinja2
-ops
+ops<2
 lightkube
-serialized-data-interface<0.4
+serialized-data-interface
+charmed-kubeflow-chisme
