--- a/tox.ini
+++ b/tox.ini
@@ -33,8 +33,6 @@ allowlist_externals =
     xargs
 commands = 
 ; uses 'bash -c' because piping didn't work in regular tox commands
-  pip-compile requirements.in
-  pip-compile requirements-fmt.in
   bash -c 'find . -type f -name "requirements*.in" | xargs --replace=\{\} pip-compile --resolver=backtracking \{\}'
 deps =
     pip-tools
@@ -53,7 +51,7 @@ commands =
     # uncomment the following line if this charm owns a lib
     # codespell {[vars]lib_path}
     codespell {toxinidir}/. --skip {toxinidir}/./.git --skip {toxinidir}/./.tox \
-      --skip {toxinidir}/./build --skip {toxinidir}/./lib --skip {toxinidir}/./venv \
+      --skip {toxinidir}/./build --skip {toxinidir}/./lib --skip {toxinidir}/./venv* \
       --skip {toxinidir}/./.mypy_cache \
       --skip {toxinidir}/./icon.svg --skip *.json.tmpl
     # pflake8 wrapper supports config from pyproject.toml
