--- a/requirements-integration.in
+++ b/requirements-integration.in
@@ -2,7 +2,9 @@ aiohttp
 jinja2
 # Pinning to <3.0 due to compatibility with the 2.9 controller version and 3.0 not being maintained anymore
 juju<3.0
+lightkube
 pytest-operator
+pyyaml
 requests
 selenium
 selenium-wire
