--- a/requirements-integration.txt
+++ b/requirements-integration.txt
@@ -8,6 +8,8 @@ aiohttp==3.8.5
     # via -r ./requirements-integration.in
 aiosignal==1.3.1
     # via aiohttp
+anyio==3.7.1
+    # via httpcore
 asttokens==2.2.1
     # via stack-data
 async-timeout==4.0.2
@@ -29,6 +31,8 @@ cachetools==5.3.1
     # via google-auth
 certifi==2023.5.7
     # via
+    #   httpcore
+    #   httpx
     #   kubernetes
     #   requests
     #   selenium
@@ -51,6 +55,7 @@ decorator==5.1.1
     #   ipython
 exceptiongroup==1.1.2
     # via
+    #   anyio
     #   pytest
     #   trio
     #   trio-websocket
@@ -63,17 +68,25 @@ frozenlist==1.4.0
 google-auth==2.17.3
     # via kubernetes
 h11==0.14.0
-    # via wsproto
+    # via
+    #   httpcore
+    #   wsproto
 h2==4.1.0
     # via selenium-wire
 hpack==4.0.0
     # via h2
+httpcore==0.17.3
+    # via httpx
+httpx==0.24.1
+    # via lightkube
 hyperframe==6.0.1
     # via
     #   h2
     #   selenium-wire
 idna==3.4
     # via
+    #   anyio
+    #   httpx
     #   requests
     #   trio
     #   yarl
@@ -99,6 +112,10 @@ kaitaistruct==0.10
     # via selenium-wire
 kubernetes==27.2.0
     # via juju
+lightkube==0.14.0
+    # via -r ./requirements-integration.in
+lightkube-models==1.27.1.4
+    # via lightkube
 macaroonbakery==1.3.1
     # via
     #   juju
@@ -184,9 +201,11 @@ pytz==2023.3
     # via pyrfc3339
 pyyaml==6.0.1
     # via
+    #   -r ./requirements-integration.in
     #   juju
     #   jujubundlelib
     #   kubernetes
+    #   lightkube
     #   pytest-operator
 requests==2.31.0
     # via
@@ -215,7 +234,11 @@ six==1.16.0
     #   pymacaroons
     #   python-dateutil
 sniffio==1.3.0
-    # via trio
+    # via
+    #   anyio
+    #   httpcore
+    #   httpx
+    #   trio
 sortedcontainers==2.4.0
     # via trio
 stack-data==0.6.2
