--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,10 @@
 # Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
-
-jinja2
-ops<2
-lightkube
-serialized-data-interface
 charmed-kubeflow-chisme
+jinja2
+# Workaround for https://github.com/python-jsonschema/jsonschema/issues/1117
+# and https://github.com/python-jsonschema/jsonschema/issues/1114
+jsonschema<4.18
+lightkube
+ops<2
+serialized-data-interface
