--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,10 @@
 # Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
-
+charmed-kubeflow-chisme
 jinja2
-ops
+# Workaround for https://github.com/python-jsonschema/jsonschema/issues/1117
+# and https://github.com/python-jsonschema/jsonschema/issues/1114
+jsonschema<4.18
 lightkube
+ops<2
 serialized-data-interface<0.4
