--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ certifi==2023.7.22
     #   httpcore
     #   httpx
     #   requests
-chardet==3.0.4
-    # via requests
 charmed-kubeflow-chisme==0.0.11
     # via -r ./requirements.in
+charset-normalizer==3.2.0
+    # via requests
 deepdiff==6.2.1
     # via charmed-kubeflow-chisme
 exceptiongroup==1.1.2
@@ -27,16 +27,18 @@ httpcore==0.17.3
     # via httpx
 httpx==0.24.1
     # via lightkube
-idna==2.10
+idna==3.4
     # via
     #   anyio
     #   httpx
     #   requests
+importlib-resources==6.0.0
+    # via jsonschema
 jinja2==3.1.2
     # via
     #   -r ./requirements.in
     #   charmed-kubeflow-chisme
-jsonschema==3.2.0
+jsonschema==4.17.3
     # via
     #   -r ./requirements.in
     #   serialized-data-interface
@@ -55,23 +57,23 @@ ops==1.5.5
     #   serialized-data-interface
 ordered-set==4.1.0
     # via deepdiff
+pkgutil-resolve-name==1.3.10
+    # via jsonschema
 pyrsistent==0.19.3
     # via jsonschema
-pyyaml==5.4
+pyyaml==6.0.1
     # via
     #   lightkube
     #   ops
     #   serialized-data-interface
-requests==2.25.0
+requests==2.31.0
     # via serialized-data-interface
 ruamel-yaml==0.17.32
     # via charmed-kubeflow-chisme
 ruamel-yaml-clib==0.2.7
     # via ruamel-yaml
-serialized-data-interface==0.3.5
+serialized-data-interface==0.6.0
     # via -r ./requirements.in
-six==1.16.0
-    # via jsonschema
 sniffio==1.3.0
     # via
     #   anyio
@@ -79,8 +81,7 @@ sniffio==1.3.0
     #   httpx
 tenacity==8.2.2
     # via charmed-kubeflow-chisme
-urllib3==1.26.16
+urllib3==2.0.4
     # via requests
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
+zipp==3.16.2
+    # via importlib-resources
