--- a/requirements-integration.txt
+++ b/requirements-integration.txt
@@ -17,7 +17,9 @@ async-timeout==4.0.2
 attrs==23.1.0
     # via
     #   aiohttp
+    #   jsonschema
     #   outcome
+    #   referencing
     #   trio
 backcall==0.2.0
     # via ipython
@@ -90,6 +92,10 @@ idna==3.4
     #   requests
     #   trio
     #   yarl
+importlib-resources==6.0.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 iniconfig==2.0.0
     # via pytest
 ipdb==0.13.13
@@ -102,6 +108,10 @@ jinja2==3.1.2
     # via
     #   -r ./requirements-integration.in
     #   pytest-operator
+jsonschema==4.18.4
+    # via serialized-data-interface
+jsonschema-specifications==2023.7.1
+    # via jsonschema
 juju==2.9.44.0
     # via
     #   -r ./requirements-integration.in
@@ -134,6 +144,8 @@ oauthlib==3.2.2
     # via
     #   kubernetes
     #   requests-oauthlib
+ops==2.4.1
+    # via serialized-data-interface
 outcome==1.2.0
     # via trio
 packaging==23.1
@@ -146,6 +158,8 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
+pkgutil-resolve-name==1.3.10
+    # via jsonschema
 pluggy==1.2.0
     # via pytest
 prompt-toolkit==3.0.39
@@ -206,16 +220,27 @@ pyyaml==6.0.1
     #   jujubundlelib
     #   kubernetes
     #   lightkube
+    #   ops
     #   pytest-operator
+    #   serialized-data-interface
+referencing==0.30.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 requests==2.31.0
     # via
     #   -r ./requirements-integration.in
     #   kubernetes
     #   macaroonbakery
     #   requests-oauthlib
+    #   serialized-data-interface
     #   theblues
 requests-oauthlib==1.3.1
     # via kubernetes
+rpds-py==0.9.2
+    # via
+    #   jsonschema
+    #   referencing
 rsa==4.9
     # via google-auth
 selenium==4.10.0
@@ -223,6 +248,8 @@ selenium==4.10.0
     #   -r ./requirements-integration.in
     #   selenium-wire
 selenium-wire==5.1.0
+    # via -r ./requirements-integration.in
+serialized-data-interface==0.6.0
     # via -r ./requirements-integration.in
 six==1.16.0
     # via
@@ -277,7 +304,9 @@ urllib3[socks]==2.0.4
 wcwidth==0.2.6
     # via prompt-toolkit
 websocket-client==1.6.1
-    # via kubernetes
+    # via
+    #   kubernetes
+    #   ops
 websockets==7.0
     # via juju
 wsproto==1.2.0
@@ -286,5 +315,7 @@ wsproto==1.2.0
     #   trio-websocket
 yarl==1.9.2
     # via aiohttp
+zipp==3.16.2
+    # via importlib-resources
 zstandard==0.21.0
     # via selenium-wire
