--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -47,6 +47,7 @@ jobs:
         with:
           provider: microk8s
           channel: 1.24/stable
+          juju-channel: 2.9/stable
           microk8s-addons: "dns storage rbac metallb:10.64.140.43-10.64.140.49"
 
       # https://github.com/charmed-kubernetes/actions-operator/issues/27
