--- a/requirements-integration.txt
+++ b/requirements-integration.txt
@@ -8,6 +8,8 @@ aiohttp==3.8.3
     # via -r ./requirements-integration.in
 aiosignal==1.3.1
     # via aiohttp
+anyio==3.7.1
+    # via httpcore
 asttokens==2.2.1
     # via stack-data
 async-generator==1.10
@@ -34,6 +36,8 @@ cachetools==5.2.0
     # via google-auth
 certifi==2022.12.7
     # via
+    #   httpcore
+    #   httpx
     #   kubernetes
     #   requests
     #   selenium
@@ -56,6 +60,7 @@ decorator==5.1.1
     #   ipython
 exceptiongroup==1.0.4
     # via
+    #   anyio
     #   pytest
     #   trio
 executing==1.2.0
@@ -67,17 +72,25 @@ frozenlist==1.3.3
 google-auth==2.15.0
     # via kubernetes
 h11==0.14.0
-    # via wsproto
+    # via
+    #   httpcore
+    #   wsproto
 h2==4.1.0
     # via selenium-wire
 hpack==4.0.0
     # via h2
+httpcore==0.17.3
+    # via httpx
+httpx==0.24.1
+    # via lightkube
 hyperframe==6.0.1
     # via
     #   h2
     #   selenium-wire
 idna==2.10
     # via
+    #   anyio
+    #   httpx
     #   requests
     #   trio
     #   yarl
@@ -103,6 +116,10 @@ kaitaistruct==0.10
     # via selenium-wire
 kubernetes==17.17.0
     # via juju
+lightkube==0.14.0
+    # via -r ./requirements-integration.in
+lightkube-models==1.27.1.4
+    # via lightkube
 macaroonbakery==1.3.1
     # via
     #   juju
@@ -189,6 +206,7 @@ pyyaml==5.4
     #   juju
     #   jujubundlelib
     #   kubernetes
+    #   lightkube
     #   pytest-operator
 requests==2.25.0
     # via
@@ -217,7 +235,11 @@ six==1.16.0
     #   pymacaroons
     #   python-dateutil
 sniffio==1.3.0
-    # via trio
+    # via
+    #   anyio
+    #   httpcore
+    #   httpx
+    #   trio
 sortedcontainers==2.4.0
     # via trio
 stack-data==0.6.2
