--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -1,4 +1,4 @@
-# Copyright 2021 Canonical Ltd.
+# Copyright 2023 Canonical Ltd.
 # See LICENSE file for licensing details.
 
 type: charm
@@ -12,3 +12,6 @@ bases:
 parts:
   charm:
     charm-python-packages: [setuptools, pip]
+    # Install rustc and cargo as build packages because some charm's
+    # dependencies need this to be built and installed from source.
+    build-packages: [rustc, cargo]
