--- a/requirements-unit.in
+++ b/requirements-unit.in
@@ -1,12 +1,7 @@
-bcrypt
-charmed-kubeflow-chisme
+# Copyright 2023 Canonical Ltd.
+# See LICENSE file for licensing details.
 coverage
-# Workaround for https://github.com/python-jsonschema/jsonschema/issues/1117
-# and https://github.com/python-jsonschema/jsonschema/issues/1114
-jsonschema<4.18
 ops
 pytest
-pytest-mock
-pytest-lazy-fixture
 pyyaml
-serialized-data-interface
+-r requirements.txt
