--- a/requirements.in
+++ b/requirements.in
@@ -1,10 +1,8 @@
-# Copyright 2021 Canonical Ltd.
+# Copyright 2023 Canonical Ltd.
 # See LICENSE file for licensing details.
+bcrypt
 charmed-kubeflow-chisme
 jinja2
-# Workaround for https://github.com/python-jsonschema/jsonschema/issues/1117
-# and https://github.com/python-jsonschema/jsonschema/issues/1114
-jsonschema<4.18
 lightkube
-ops<2
+ops
 serialized-data-interface
