--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,10 @@
 # See LICENSE file for licensing details.
 
 options:
+  enable-password-db:
+    type: boolean
+    default: true
+    description: Allows dex to keep a list of passwords which can be used to login to dex
   port:
     type: int
     default: 5556
