--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -46,8 +46,8 @@ jobs:
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
-          channel: 1.24/stable
-          juju-channel: 2.9/stable
+          channel: 1.25-strict/stable
+          juju-channel: 3.1/stable
           microk8s-addons: "dns storage rbac metallb:10.64.140.43-10.64.140.49"
 
       # https://github.com/charmed-kubernetes/actions-operator/issues/27
@@ -61,7 +61,7 @@ jobs:
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install ./google-chrome-stable_current_amd64.deb
           sudo apt-get install chromium-chromedriver
-          sg microk8s -c "tox -e integration -- --model kubeflow"
+          tox -e integration -- --model kubeflow
 
       - name: Get istio gateway
         run: kubectl get gateway -A
