--- a/requirements-integration.txt
+++ b/requirements-integration.txt
@@ -8,9 +8,9 @@ aiohttp==3.8.5
     # via -r requirements-integration.in
 aiosignal==1.3.1
     # via aiohttp
-anyio==3.7.1
+anyio==4.0.0
     # via httpcore
-asttokens==2.2.1
+asttokens==2.4.0
     # via stack-data
 async-timeout==4.0.3
     # via aiohttp
@@ -25,7 +25,7 @@ bcrypt==4.0.1
     # via paramiko
 blinker==1.6.2
     # via selenium-wire
-brotli==1.0.9
+brotli==1.1.0
     # via selenium-wire
 cachetools==5.3.1
     # via google-auth
@@ -53,7 +53,7 @@ decorator==5.1.1
     # via
     #   ipdb
     #   ipython
-exceptiongroup==1.1.2
+exceptiongroup==1.1.3
     # via
     #   anyio
     #   pytest
@@ -79,6 +79,8 @@ httpcore==0.17.3
     # via httpx
 httpx==0.24.1
     # via lightkube
+hvac==1.2.0
+    # via juju
 hyperframe==6.0.1
     # via
     #   h2
@@ -102,24 +104,20 @@ jinja2==3.1.2
     # via
     #   -r requirements-integration.in
     #   pytest-operator
-juju==2.9.44.0
+juju==3.2.2
     # via
     #   -r requirements-integration.in
     #   pytest-operator
-jujubundlelib==0.5.7
-    # via theblues
 kaitaistruct==0.10
     # via selenium-wire
 kubernetes==27.2.0
     # via juju
 lightkube==0.14.0
     # via -r requirements-integration.in
-lightkube-models==1.27.1.4
+lightkube-models==1.28.1.4
     # via lightkube
 macaroonbakery==1.3.1
-    # via
-    #   juju
-    #   theblues
+    # via juju
 markupsafe==2.1.3
     # via jinja2
 matplotlib-inline==0.1.6
@@ -146,7 +144,7 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pluggy==1.2.0
+pluggy==1.3.0
     # via pytest
 prompt-toolkit==3.0.39
     # via ipython
@@ -168,6 +166,8 @@ pycparser==2.21
     # via cffi
 pygments==2.16.1
     # via ipython
+pyhcl==0.4.5
+    # via hvac
 pymacaroons==0.13.0
     # via macaroonbakery
 pynacl==1.5.0
@@ -187,33 +187,32 @@ pysocks==1.7.1
     # via
     #   selenium-wire
     #   urllib3
-pytest==7.4.0
+pytest==7.4.2
     # via
     #   pytest-asyncio
     #   pytest-operator
 pytest-asyncio==0.21.1
     # via pytest-operator
-pytest-operator==0.28.0
+pytest-operator==0.29.0
     # via -r requirements-integration.in
 python-dateutil==2.8.2
     # via kubernetes
-pytz==2023.3
+pytz==2023.3.post1
     # via pyrfc3339
 pyyaml==6.0.1
     # via
     #   -r requirements-integration.in
     #   juju
-    #   jujubundlelib
     #   kubernetes
     #   lightkube
     #   pytest-operator
 requests==2.31.0
     # via
     #   -r requirements-integration.in
+    #   hvac
     #   kubernetes
     #   macaroonbakery
     #   requests-oauthlib
-    #   theblues
 requests-oauthlib==1.3.1
     # via kubernetes
 rsa==4.9
@@ -243,10 +242,8 @@ sortedcontainers==2.4.0
     # via trio
 stack-data==0.6.2
     # via ipython
-tenacity==8.2.2
+tenacity==8.2.3
     # via -r requirements-integration.in
-theblues==0.5.2
-    # via juju
 tomli==2.0.1
     # via
     #   ipdb
@@ -261,7 +258,7 @@ trio==0.22.2
     # via
     #   selenium
     #   trio-websocket
-trio-websocket==0.10.3
+trio-websocket==0.10.4
     # via selenium
 typing-extensions==4.7.1
     # via
@@ -276,9 +273,9 @@ urllib3[socks]==2.0.4
     #   selenium
 wcwidth==0.2.6
     # via prompt-toolkit
-websocket-client==1.6.1
+websocket-client==1.6.2
     # via kubernetes
-websockets==7.0
+websockets==8.1
     # via juju
 wsproto==1.2.0
     # via
