--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -61,7 +61,7 @@ jobs:
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install ./google-chrome-stable_current_amd64.deb
           sudo apt-get install chromium-chromedriver
-          tox -e integration -- --model kubeflow
+          sg snap_microk8s -c "tox -e integration -- --model kubeflow"
 
       - name: Get istio gateway
         run: kubectl get gateway -A
