build: install rustc and cargo as build packages
Some of this charm dependencies need rustc and cargo to build and install from source,
poviding this toolchain and library ensures the right tools are installed in the
environment, preventing issues when pip installing charm dependencies.
Partial cherry-pick of a716963

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -12,3 +12,6 @@ bases:
 parts:
   charm:
     charm-python-packages: [setuptools, pip]
+    # Install rustc and cargo as build packages because some charm's
+    # dependencies need this to be built and installed from source.
+    build-packages: [rustc, cargo]
