--- a/metadata.yaml
+++ b/metadata.yaml
@@ -85,4 +85,5 @@ resources:
   oci-image:
     type: oci-image
     description: OCI image for dex container
-    upstream-source: dexidp/dex:v2.31.2
+    upstream-source: charmedkubeflow/dex:2.31.2_b2b609b
+    
