--- a/requirements-unit.txt
+++ b/requirements-unit.txt
@@ -26,6 +26,8 @@ charset-normalizer==3.2.0
     # via
     #   -r requirements.txt
     #   requests
+cosl==0.0.11
+    # via -r requirements.txt
 coverage==7.3.0
     # via -r requirements-unit.in
 deepdiff==6.2.1
@@ -55,7 +57,7 @@ idna==3.4
     #   anyio
     #   httpx
     #   requests
-importlib-resources==6.0.1
+importlib-resources==6.4.0
     # via
     #   -r requirements.txt
     #   jsonschema
@@ -86,6 +88,7 @@ ops==2.5.0
     #   -r requirements-unit.in
     #   -r requirements.txt
     #   charmed-kubeflow-chisme
+    #   cosl
     #   serialized-data-interface
 ordered-set==4.1.0
     # via
@@ -109,6 +112,7 @@ pyyaml==6.0.1
     # via
     #   -r requirements-unit.in
     #   -r requirements.txt
+    #   cosl
     #   lightkube
     #   ops
     #   serialized-data-interface
@@ -140,6 +144,10 @@ tenacity==8.2.2
     #   charmed-kubeflow-chisme
 tomli==2.0.1
     # via pytest
+typing-extensions==4.11.0
+    # via
+    #   -r requirements.txt
+    #   cosl
 urllib3==2.0.4
     # via
     #   -r requirements.txt
@@ -148,7 +156,7 @@ websocket-client==1.6.1
     # via
     #   -r requirements.txt
     #   ops
-zipp==3.16.2
+zipp==3.18.1
     # via
     #   -r requirements.txt
     #   importlib-resources
