--- a/metadata.yaml
+++ b/metadata.yaml
@@ -88,4 +88,4 @@ resources:
   oci-image:
     type: oci-image
     description: OCI image for dex container
-    upstream-source: ghcr.io/dexidp/dex:v2.39.1
+    upstream-source: charmedkubeflow/dex:2.39.1-a91817e
