feat: add dex_oidc_config library
Add a library to handle the dex-oidc-config relation interface. This library
allows dex-auth to share its OIDC configuration with OIDC clients such as the
oidc-gatekeeper charm. The library is designed to be extended to share any
information about Dex, but right now it is only sharing Dex's issuer url.

Closes #203

--- a/requirements.in
+++ b/requirements.in
@@ -5,6 +5,8 @@ charmed-kubeflow-chisme
 jinja2
 lightkube
 ops
+# This is required by the dex-oidc-config library
+pydantic
 serialized-data-interface
 # from prometheus_k8s.v0.prometheus_scrape.py
 cosl
