--- a/requirements-unit.txt
+++ b/requirements-unit.txt
@@ -4,6 +4,10 @@
 #
 #    pip-compile requirements-unit.in
 #
+annotated-types==0.7.0
+    # via
+    #   -r requirements.txt
+    #   pydantic
 anyio==3.7.1
     # via
     #   -r requirements.txt
@@ -102,6 +106,12 @@ pkgutil-resolve-name==1.3.10
     #   jsonschema
 pluggy==1.5.0
     # via pytest
+pydantic==2.8.2
+    # via -r requirements.txt
+pydantic-core==2.20.1
+    # via
+    #   -r requirements.txt
+    #   pydantic
 pyrsistent==0.19.3
     # via
     #   -r requirements.txt
@@ -147,7 +157,10 @@ tomli==2.0.1
 typing-extensions==4.11.0
     # via
     #   -r requirements.txt
+    #   annotated-types
     #   cosl
+    #   pydantic
+    #   pydantic-core
 urllib3==2.0.4
     # via
     #   -r requirements.txt
