--- a/metadata.yaml
+++ b/metadata.yaml
@@ -81,6 +81,8 @@ provides:
     interface: prometheus_scrape
   grafana-dashboard:
     interface: grafana_dashboard
+  dex-oidc-config:
+    interface: dex-oidc-config
 containers:
   dex:
     resource: oci-image
